Fix #dao callout on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1084,6 +1084,10 @@ faq page
     column-gap: 0;
   }
 
+  #dao-callout {
+    text-align: left;
+    margin: 2em auto 0 auto;
+  }
 
 }
 
